[project]
name = "bllind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "platformdirs>=4.3.6",
    "torch>=2.6.0",
    "transformers>=4.50.0",
]


[tool.ruff]
indent-width = 2

[tool.setuptools]
packages = { find = { include = ["bllind*"] } }
